package com.agence.Trip.Activity;

public enum ActivityCategory {
    CULTURE,
    SPORT,
    NATURE,
    RELAXATION,
    ADVENTURE,
    MUSIQUE,
    FOOD,
    ANY
}


